# Pedalis

./: LICENSE  README.md  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ConnectionPanel.tsx  Modal.tsx  ProfileBar.tsx  SceneEditor.tsx  SceneSelector.tsx  StompEditor.tsx  StompPedal.tsx
src/hooks/: useHotkeys.ts
src/lib/: constants.ts  profileStorage.ts
src/store/: useStore.ts
src/types/: index.ts
