[package]
name = "pedalis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.11.0"
serialport = "4.9.0"

[features]
# This is the feature configuration for Tauri
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
